Dev Part 2 Initial Setup

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -9,13 +9,8 @@
 </head>
 
 <body>
-    Before
-    <br>
-    <br>
-    <%- body %>
-        <br>
-        <br>
-        After
+    <%- include('../partials/header.ejs') %>
+        <%- body %>
 </body>
 
 </html>
